# rust-yew-sandbox

./: Cargo.toml  index.html  yew-app-70cd4aa68974f863.js  yew-app-aa2d811cc984a9fb_bg.wasm
assets/: main.scss
src/: app.rs  main.rs
src/components/: header.rs  header_item.rs  mod.rs
src/helpers/: fetch.rs  local_storage.rs  mod.rs
src/helpers/macros/: console_log.rs  mod.rs
src/pages/: about.rs  faq.rs  feature.rs  features.rs  home.rs  mod.rs  pricing.rs
src/routes/: features_routes.rs  main_route.rs  mod.rs
src/structs/: mod.rs  page.rs
src/switches/: features_switch.rs  main_switch.rs  mod.rs
